--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
             idle: {
                 color: "white",
                 type: "pill",
-                title: "Start Interview",
+                title: "Click Here",
                 subtitle: "Begin your session",
                 icon:"https://www.svgrepo.com/show/389050/bot.svg"
             },
@@ -1013,7 +1013,7 @@
                                 customButton.className = 'custom-vapi-button idle';
                                 customButton.innerHTML = `
                                     <i class="fas fa-robot robot-icon"></i>
-                                    <span>Click the button below — real prep starts with mocks</span>
+                                    <span>Click the button  — real prep starts with mocks</span>
                                 `;
                                 
                                 let isActive = false;
@@ -1048,7 +1048,7 @@
                                         customButton.className = 'custom-vapi-button idle';
                                         customButton.innerHTML = `
                                             <i class="fas fa-robot robot-icon"></i>
-                                            <span>Click the button below — real prep starts with mocks</span>
+                                            <span>Click the button — real prep starts with mocks</span>
                                         `;
                                     }
                                 };
