--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         width: auto;
       }
     }
+        #interview-page {
+  transform: scale(0.85);
+  transform-origin: top center; /* So it scales from the top center */
+  width: 117.65%;               /* Compensate for the scale (1 / 0.85) */
+}
 
         * {
             box-sizing: border-box;
