--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     }
         #interview-page {
   transform: scale(0.85);
-  transform-origin: top center; /* So it scales from the top center */
-  width: 117.65%;               /* Compensate for the scale (1 / 0.85) */
+  transform-origin:center; /* So it scales from the top center */
+           /* Compensate for the scale (1 / 0.85) */
 }
 
         * {
