--- a/index.html
+++ b/index.html
@@ -770,8 +770,8 @@
     </div>
 
     <script>
-        const assistant = "7e4d7726-a28f-4889-85ea-e2f965580a77";
-        const apiKey = "ebdb7e1f-571e-4b5d-a94d-e02fc46212e9";
+        const assistant = "190a8d04-e640-4a8d-9489-6b20170370ef";
+        const apiKey = "b08e8342-b256-40eb-854d-47399a89fd94";
         const buttonConfig = {
             offset: "40px",
             width: "200px",
@@ -794,6 +794,7 @@
                 type: "pill",
                 title: "End Interview",
                 subtitle: "Stop the session",
+                icon:"https://www.svgrepo.com/show/389050/bot.svg"
             },
         };
 
