--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                 </button>
                 <button class="test-button start-interview" id="start-interview-btn" disabled>
                     <i class="fas fa-play"></i>
-                    <span>Start Interview</span>
+                    <span>Go to Next Page</span>
                 </button>
             </div>
         </div>
