--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       body {
         zoom: 0.875;                    /* Chrome, Edge */
         transform: none;
-        width: 115%;
+        width:auto;
       }
     }
         #interview-page {
